# GPU_workgroup_managment

./: .gitignore  README.md  machines_spec.txt
UVM_test/test1/: CMakeLists.txt
UVM_test/test1/include/rt/: cl_execution.h  ggc_ocl.h
UVM_test/test1/include/rt_common/: constants.h  discovery.h  ticket_lock.h
UVM_test/test1/include/rt_device/: discovery.cl  ticket_lock.cl
UVM_test/test1/src/host/: main.cpp
kernel_merge/: CMakeLists.txt  cl_scheduler.h  domerge.bat  domerge.py  findtools.py.template
kernel_merge/examples/octree/: octree_km_input.cl
kernel_merge/examples/simple_barrier_with_reduction/: reduction.cl  simple_barrier.cl
kernel_merge/examples/simple_barrier_with_reduction/expected/: merged.cl  restoration_ctx.h
kernel_merge/include/: KernelInfo.h  LocalStorageDetector.h  ProcessKernelVisitor.h  ProcessNonPersistentKernelVisitor.h  ProcessPersistentKernelVisitor.h  ProcessStandalonePersistentKernelVisitor.h
kernel_merge/sample_kernels/non_persistent/: trivial.cl
kernel_merge/sample_kernels/persistent/: graph_color.cl
kernel_merge/src/: KernelMerge.cpp  LocalStorageDetector.cpp  ProcessKernelVisitor.cpp  ProcessNonPersistentKernelVisitor.cpp  ProcessPersistentKernelVisitor.cpp  ProcessStandalonePersistentKernelVisitor.cpp  StandalonePersistent.cpp  kernel_merge.cpp
kernel_merge/stubs/: stubs.h
kernel_merge/stubs/postmerge/: cl_scheduler.h
kernel_merge/stubs/premerge/: global_barrier.h  opencl_stubs.h
src/: CMakeLists.txt  run_test.py
src/base/: CMakeLists.txt  commandlineflags.h  file.cc  file.h  platform.cc  platform.h  profile.cc  profile.h
src/ckill_only/: CMakeLists.txt
src/ckill_only/device/: mega_kernel.cl
src/ckill_only/host/: main.cpp
src/first_persistent/: CMakeLists.txt
src/first_persistent/host/: main.cpp
src/first_resize/: CMakeLists.txt
src/first_resize/host/: main.cpp
src/host_skeleton/: skel.cpp
src/lonestar/: CMakeLists.txt
src/lonestar/graph_apps/bfs/: bfs.h  restoration_ctx.h
src/lonestar/graph_apps/sssp/: portable_endian.h  restoration_ctx.h  sssp.h
src/lonestar/inputs/: README.txt
src/lonestar/solutions/: README.txt
src/non_persistent_kernels/: CMakeLists.txt
src/non_persistent_kernels/matmult/: CMakeLists.txt  matmult.cpp  matmult.h
src/non_persistent_kernels/matmult/device/: matmult.cl
src/non_persistent_kernels/reduce/: reduce.h
src/non_persistent_kernels/reduce/device/: reduce.cl
src/opencl/: CMakeLists.txt  environment.cc  environment.h  interface.cc  interface.h  list_test.cc  opencl.h
src/pannotia/: CMakeLists.txt
src/pannotia/graph_apps/bc/: bc.h  bc_parse.h  restoration_ctx.h
src/pannotia/graph_apps/color/: color.h  restoration_ctx.h
src/pannotia/graph_apps/mis/: mis.h  restoration_ctx.h
src/pannotia/graph_apps/sssp/: sssp.h
src/pannotia/graph_parser/: parse.cpp  parse.h
src/pannotia/inputs/: README.txt
src/pannotia/solutions/: README.txt
src/scheduler_rt/rt_common/: cl_scheduler.h  cl_types.h  constants.h  discovery.h  iw_barrier.h  kernel_ctx.h  sense_reversal_barrier.h
src/scheduler_rt/rt_device/: cl_scheduler.cl  discovery.cl  iw_barrier.cl  kernel_ctx.cl  main_device_body.cl  ocl_utility.cl  scheduler_1.cl  sense_reversal_barrier.cl
src/scheduler_rt/rt_host/: cl_communicator.h  cl_execution.h  cl_scheduler.h  discovery.h  iw_barrier.cl  kernel_ctx.h
src/single_kernel/: CMakeLists.txt
src/single_kernel/device/: mega_kernel.cl
src/single_kernel/host/: main.cpp
src/test_suite/: CMakeLists.txt
src/test_suite/checkRequirements/: CMakeLists.txt  main.cc
src/test_suite/connect_four/: CMakeLists.txt  board.txt  connect_four.cpp  connect_four.h
src/test_suite/connect_four/common/: connect_four_data.h
src/test_suite/connect_four/device/: connect_four.cl  merged.cl  standalone.cl
src/test_suite/final_octree/: CMakeLists.txt  octree.h  octree_common.h
src/test_suite/final_octree/device/: merged.cl  octree.cl  standalone.cl
src/test_suite/interface_octree/: CMakeLists.txt
src/test_suite/interface_octree/common/: octree_types.h  restoration_ctx.h
src/test_suite/interface_octree/device/: merged.cl  standalone.cl
src/test_suite/interface_octree/host/: octree.h  rand.cc
src/test_suite/matmult/: CMakeLists.txt  matmult.cl  matmult.cpp
src/test_suite/mega_octree/: CMakeLists.txt
src/test_suite/mega_octree/common/: restoration_ctx.h
src/test_suite/mega_octree/device/: mega_kernel.cl
src/test_suite/mega_octree/host/: main.cpp
src/test_suite/mega_octree_km/: CMakeLists.txt
src/test_suite/mega_octree_km/common/: restoration_ctx.h
src/test_suite/mega_octree_km/device/: mega_kernel.cl
src/test_suite/mega_octree_km/host/: main.cpp
src/test_suite/octree/: CMakeLists.txt  helper.cc  helper.h  lbabp.cc  lbabp.h  main.cc  octree.cc  octree.h  octree_host_dev_shared.h  shared_host_side.h
src/test_suite/octree/device/: octree_kernel.cl
src/test_suite/os_freq/: CMakeLists.txt
src/test_suite/os_freq/device/: os_freq.cl
src/test_suite/os_freq/host/: os_freq.cpp
src/tyler_handwritten_tests/: CMakeLists.txt
src/tyler_handwritten_tests/ckill_only/: CMakeLists.txt
src/tyler_handwritten_tests/ckill_only/common/: restoration_ctx.h
src/tyler_handwritten_tests/ckill_only/host/: main.cpp
src/tyler_handwritten_tests/color_handwritten/: CMakeLists.txt
src/tyler_handwritten_tests/color_handwritten/common/: restoration_ctx.h
src/tyler_handwritten_tests/color_handwritten/device/: mega_kernel.cl
src/tyler_handwritten_tests/color_handwritten/host/: main.cpp  parse.cpp
src/tyler_handwritten_tests/first_persistent/: CMakeLists.txt
src/tyler_handwritten_tests/first_persistent/device/: mega_kernel.cl
src/tyler_handwritten_tests/first_persistent/host/: main.cpp
src/tyler_handwritten_tests/first_resize/: CMakeLists.txt
src/tyler_handwritten_tests/first_resize/device/: clang_cmd.bat  mega_kernel.cl  minimal_bug.cl  pre-simplified.cl  pre.cl
src/tyler_handwritten_tests/first_resize/host/: main.cpp
src/tyler_handwritten_tests/single_kernel/: CMakeLists.txt
src/uvm_tests/: CMakeLists.txt
src/uvm_tests/test1/: CMakeLists.txt
(+87 files in other folders)
